# job-agent

./: .env.example  .gitignore  PROFILE.md  README.md  config.py  database.py  email_sender.py  evaluator.py  gui.py  main.py  pyproject.toml  requirements.txt  run_job_agent.bat.example  scraper_ba.py  scraper_linkedin.py  scraper_stepstone.py  scraper_xing.py  test_ba.py  test_email.py  test_evaluator.py  test_linkedin.py  test_stepstone.py  test_xing.py  utils.py
